@startuml

class User {
    + user_id: int
    + username: str
    + password_hash: str
    + email: str
    + role: str
    + __init__(user_id: int, username: str, password_hash: str, email: str, role: str)
    + login() : None
    + logout() : None
    + update_profile() : None
}

class Event {
    + event_id: int
    + name: str
    + description: str
    + date: str
    + start_time: str
    + end_time: str
    + location: str
    + organizer_id: int
    + __init__(event_id: int, name: str, description: str, date: str, start_time: str, end_time: str, location: str, organizer_id: int)
    + create_event() : None
    + edit_event() : None
    + delete_event() : None
    + get_details() : str
}

class Participant {
    + participant_id: int
    + user_id: int
    + event_id: int
    + status: str
    + __init__(participant_id: int, user_id: int, event_id: int, status: str)
    + RSVP() : None
    + cancel_rsvp() : None
    + get_status() : str
}

class Venue {
    + venue_id: int
    + name: str
    + address: str
    + capacity: int
    + availability_status: str
    + __init__(venue_id: int, name: str, address: str, capacity: int, availability_status: str)
    + book_venue() : None
    + release_venue() : None
    + check_availability() : bool
}

class Notification {
    + notification_id: int
    + user_id: int
    + event_id: int
    + message: str
    + status: str
    + timestamp: str
    + __init__(notification_id: int, user_id: int, event_id: int, message: str, status: str, timestamp: str)
    + send_notification() : None
    + mark_as_read() : None
    + get_notifications() : None
}

class Feedback {
    + feedback_id: int
    + event_id: int
    + participant_id: int
    + rating: int
    + comments: str
    + timestamp: str
    + __init__(feedback_id: int, event_id: int, participant_id: int, rating: int, comments: str, timestamp: str)
    + submit_feedback() : None
    + get_feedback_summary() : dict
}

User "1" -- "0..*" Participant : manages >
Event "1" -- "0..*" Participant : includes >
Event "1" -- "0..*" Feedback : receives >
User "1" -- "0..*" Notification : receives >
Event "1" -- "1" Venue : held at >

@enduml
